updated acrylamid post content, styles

--- a/blog/style/pygments-nuvola.css
+++ b/blog/style/pygments-nuvola.css
@@ -16,7 +16,7 @@
 .highlight .gd { color: #2020ff; background-color: #c8f2ea } /* Generic.Deleted */
 .highlight .ge { color: #000000} /* Generic.Emph */
 .highlight .gr { color: #ffffff; background-color: #ff0000 } /* Generic.Error */
-.highlight .gh { color: #1014AD; font-weight: bold} /* Generic.Heading */
+.highlight .gh { color: #F56017; font-weight: bold} /* Generic.Heading */
 .highlight .gi { color: #000000} /* Generic.Inserted */
 .highlight .go { color: #888; background-color: #EFEFF7 } /* Generic.Output */
 .highlight .gp { color: #F56017} /* Generic.Prompt */
