--- a/theme/style/main.css
+++ b/theme/style/main.css
@@ -82,6 +82,10 @@ article h1 {
     margin:0 0 32px 0;
     color:#F56017;
 }
+article h2 {
+    font-weight:normal;
+    font-size:16pt;
+}
 article time {
     float:right;
     color:#888;
