--- a/blog/style/main.css
+++ b/blog/style/main.css
@@ -86,6 +86,10 @@ article h2 {
     font-weight:normal;
     font-size:16pt;
 }
+article h3 {
+    font-weight:normal;
+    font-size:14pt;
+}
 article time {
     float:right;
     color:#888;
