fix util-link padding

--- a/theme/style/main.css
+++ b/theme/style/main.css
@@ -97,7 +97,7 @@ article time {
 .util-links {
     clear:both;
     text-align: center;
-    margin-bottom:50px;
+    margin:20px 0;
 }
 .util-links a {
     color:#888;
