minor css tweaks
change h1 style to not be bold
add string syntax highlighting

--- a/blog/style/main.css
+++ b/blog/style/main.css
@@ -81,6 +81,8 @@ article {
 article h1 {
     margin:0 0 32px 0;
     color:#F56017;
+    font-weight:normal;
+    font-size:20pt;
 }
 article h2 {
     font-weight:normal;
