add dead-code blog post

--- a/blog/style/pygments-nuvola.css
+++ b/blog/style/pygments-nuvola.css
@@ -2,7 +2,7 @@
 .highlight .c { color: #888 } /* Comment */
 .highlight .err { color: #222222} /* Error */
 .highlight .g { color: #222222} /* Generic */
-.highlight .k { color: #F56017; font-weight: bold} /* Keyword */
+.highlight .k { color: #F56017} /* Keyword */
 .highlight .l { color: #222222} /* Literal */
 .highlight .n { color: #222222} /* Name */
 .highlight .o { color: #222222} /* Operator */
