add align-center class for images
this class is emmitted by restructured text

--- a/blog/style/main.css
+++ b/blog/style/main.css
@@ -221,3 +221,9 @@ nav a:hover {
     display:block !important;
     margin:20px auto !important;
 }
+
+img.align-center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
