don't justify text on small screens

--- a/blog/style/main.css
+++ b/blog/style/main.css
@@ -161,6 +161,9 @@ tt, code, kbd, samp {
         width:98%;
         padding:0 1%;
     }
+    article {
+        text-align:left;
+    }
     article h1 {
         width:100%;
         text-align:center;
