--- a/theme/style/main.css
+++ b/theme/style/main.css
@@ -246,18 +246,43 @@ nav a:hover {
     color:#fff;
 }
 
-/* !important hack to override g+'s inline styles */
-#comments div {
-    display:block !important;
-    margin:20px auto !important;
+.comment {
+    margin-top:40px;
+    margin-bottom:40px;
+    border: 1px solid #ddd;
+    font-size: 0.9em;
+    box-shadow: 4px 4px 2px #ddd
+}
+.comment:target {
+    border: 1px solid #F56017;
+}
+.comment-avatar {
+    width:40px;
+    height:40px;
+    padding-right: 15px;
+}
+.comment-metadata {
+    height: 40px;
+    display: flex;
+    align-items: center;
+}
+.comment-content {
+    padding: 0px 20px 0px 55px;
+}
+.comment-ongithub {
+    height:80px;
+    line-height: 80px;
+    text-align: center;
 }
 
+/* styles for use in blog posts */
 .align-center {
     text-align:center;
 }
-
 img.align-center {
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
+
+
